--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,5 +76,5 @@ header {
 
   section {
     padding: 60px;
-    background-image: url("C:\Users\vicki\projects\run-buddy\assets\images\hero-bg.jpg");
+    background-image: url('/assets/images/hero-bg.jpg');
   }
