--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,86 +1,78 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
-    color: #39a6b2;
-    font-family: Helvetica, Arial, sans-serif;
-  }
+  /* more on this crazy alphanumerical value in a minute! */
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+}
 
-  /* apply styles to <header> */
+/* apply styles to <header> */
 header {
-    padding: 20px 35px;
-    background-color: #39a6b2;
-  }
+  padding: 20px 35px;
+  background-color: #39a6b2;
+}
 
-  header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
-  }
-  
-  header a {
-    text-decoration: none;
-    color: #fce138;
-  }
+header h1 {
+  font-weight: bold;
+  font-size: 36px;
+  color: #fce138;
+  margin: 0;
+  display: inline;
+}
+header a {
+  text-decoration: none;
+  color: #fce138;
+}
 
-  header nav {
-    float: right;
-    margin: 7px 0;
-  }
+header nav {
+  float: right;
+  margin: 7px 0;
+}
 
-  header nav ul li {
-    display: inline;
-  }
+header nav ul li {
+  display: inline;
+}
 
-  header nav ul li a {
-    margin: 0 30px;
-    font-weight: lighter;
-    font-size: 22px;
-  }
+header nav ul li a {
+  margin: 0 30px;
+  font-weight: lighter;
+  font-size: 22px;
+}
 
-  header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
-    display: inline;
-  }
+footer {
+  background: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+}
 
-  footer {
-    background: #fce138;
-    width: 100%;
-    padding: 40px 35px;
-  }
+footer h2 {
+  display: inline;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
 
-  footer h2 {
-    display: inline;
-    color: #024e76;
-    font-size: 30px;
-    margin: 0;
-  }
+footer div {
+  float: right;
+  line-height: 1.5;
+  text-align: right;
+}
 
-  footer div {
-    float: right;
-    line-height: 1.5;
-    text-align: right;
-  }
+footer a {
+  color: #024e76;
+}
 
-  footer a {
-    color: #024e76;
-  }
+section {
+  padding: 60px;
+}
 
-  section {
-    padding: 60px;
-  }
-
-  /* Hero Style Start */
+/* Hero Style Start */
 .hero {
-  background-image: url("./assets/images/hero-bg.jpg");
+  background-image: url('../images/hero-bg.jpg');
   height: 600px;
   background-size: cover;
   background-position: center;
@@ -96,14 +88,13 @@ header {
   color: #024e76;
   position: absolute;
   bottom: 120px;
-  right: 240px;
+  right: 140px;
 }
 
 .hero-form h3 {
   font-size: 24px;
   margin: 0;
 }
-
 .hero-form p {
   margin: 5px 0 15px 0;
 }
@@ -129,19 +120,9 @@ header {
   padding: 10px 20px;
   font-size: 16px;
 }
-/* HERO STYLES END */
 
 .intro {
   text-align: center;
-}
-
-.intro h2 {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #fce138;
 }
 
 .intro p {
@@ -149,33 +130,12 @@ header {
   color: #39a6b2;
   width: 80%;
   font-size: 20px;
-}
-
-.intro p {
-  /* add this alongside your other declarations */
   margin: 0 auto;
 }
 
 .steps {
   text-align: center;
   background: #fce138;
-}
-
-.section-title {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
-  border-bottom: 3px solid;
-}
-
-.primary-border {
-  border-color: #fce138;
-}
-
-.secondary-border {
-  border-color: #39a6b2;
 }
 
 .steps div {
@@ -202,6 +162,23 @@ header {
   font-size: 38px;
 }
 
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
 .trainers {
   text-align: center;
 }
@@ -225,14 +202,6 @@ header {
   width: 65%;
 }
 
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
@@ -247,4 +216,12 @@ header {
 .trainer-bio p {
   font-size: 17px;
   line-height: 1.3;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
 }
